--- a/demo/res/layout/activity_capture_image_pit.xml
+++ b/demo/res/layout/activity_capture_image_pit.xml
@@ -7,7 +7,7 @@
     android:weightSum="1"
     android:baselineAligned="false"
     android:orientation="vertical"
-    android:background="@drawable/bluegradient">
+    android:background="@drawable/background_2">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
