--- a/demo/res/layout/details_view.xml
+++ b/demo/res/layout/details_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/scrollView"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@drawable/bluegradient">
+    android:background="@drawable/background_2">
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
