--- a/demo/res/layout-large/activity_trench_survey.xml
+++ b/demo/res/layout-large/activity_trench_survey.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment android:name="com.google.maps.android.utils.demo.DuctIdFragment"
+    <fragment android:name="com.google.maps.android.utils.activity.DuctIdFragment"
               android:id="@+id/duct_fragment"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent" />
 
-    <fragment android:name="com.google.maps.android.utils.demo.DuctDetailsFragment"
+    <fragment android:name="com.google.maps.android.utils.activity.DuctDetailsFragment"
               android:id="@+id/details_fragment"
               android:layout_weight="2"
               android:layout_width="0dp"
