--- a/demo/res/layout/fragment_maintenance.xml
+++ b/demo/res/layout/fragment_maintenance.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.maps.android.utils.demo.MaintenanceFragment"
+    tools:context="com.google.maps.android.utils.activity.MaintenanceFragment"
     android:background="@drawable/background_2">
 
     <android.support.constraint.ConstraintLayout
