--- a/demo/res/layout/survey_fragment.xml
+++ b/demo/res/layout/survey_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_2"
-    tools:context="com.google.maps.android.utils.demo.SurveyFragment">
+    tools:context="com.google.maps.android.utils.activity.SurveyFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
