--- a/demo/res/layout/activity_capture_image.xml
+++ b/demo/res/layout/activity_capture_image.xml
@@ -6,72 +6,52 @@
     android:layout_height="fill_parent"
     android:weightSum="1"
     android:baselineAligned="false"
-    android:orientation="vertical"
-    android:background="@drawable/background_2">
+    android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/ugbutton"
-            android:layout_width="170dp"
-            android:theme="@style/MyButton"
-            android:layout_height="76dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
-            android:text="Capture image"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/imageView1"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
-
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="153dp"
-            android:layout_height="87dp"
+            android:layout_width="309dp"
+            android:layout_height="279dp"
             android:layout_weight="0.22"
             android:src="@android:drawable/ic_menu_camera"
-            android:layout_marginRight="8dp"
+            android:gravity="center_horizontal"
+            android:layout_marginRight="33dp"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/fibereqpbutton"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp" />
+            app:layout_constraintVertical_bias="0.962" />
 
         <Button
             android:id="@+id/fibereqpbutton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Upload Image"
+            android:text="Next"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ugbutton"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="0.818" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="155dp" />
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="93dp"
-            android:layout_height="93dp"
+            android:id="@+id/imageView"
+            android:layout_width="127dp"
+            android:layout_height="85dp"
             android:src="@drawable/infalogo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="28dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginTop="37dp"
+            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton"
+            android:layout_marginRight="33dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.962"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            tools:layout_editor_absoluteX="224dp" />
 
     </android.support.constraint.ConstraintLayout>
 
