--- a/demo/res/layout/activity_capture_image.xml
+++ b/demo/res/layout/activity_capture_image.xml
@@ -14,44 +14,59 @@
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="309dp"
-            android:layout_height="279dp"
+            android:layout_width="124dp"
+            android:layout_height="136dp"
+            android:layout_marginBottom="139dp"
             android:layout_weight="0.22"
-            android:src="@android:drawable/ic_menu_camera"
             android:gravity="center_horizontal"
-            android:layout_marginRight="33dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="48dp"
+            android:src="@drawable/takepic"
             app:layout_constraintBottom_toTopOf="@+id/fibereqpbutton"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.962" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/fibereqpbutton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="155dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:text="Next"
+            android:layout_marginStart="8dp"
+            android:text="Upload"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="155dp" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="127dp"
             android:layout_height="85dp"
-            android:src="@drawable/infalogo"
-            android:layout_marginTop="37dp"
-            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton"
+            android:layout_marginEnd="33dp"
             android:layout_marginRight="33dp"
+            android:layout_marginTop="37dp"
+            android:src="@drawable/infalogo"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteX="224dp" />
+            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton" />
+
+        <GridView
+            android:id="@+id/gridView"
+            android:layout_width="244dp"
+            android:layout_height="265dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/imageView1"
+            android:layout_marginLeft="26dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/fibereqpbutton"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.538" />
 
     </android.support.constraint.ConstraintLayout>
 
