--- a/demo/res/layout/fragment_duct_details.xml
+++ b/demo/res/layout/fragment_duct_details.xml
@@ -20,19 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:layout_width="186dp"
-            android:layout_height="149dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="41dp"
-            app:layout_constraintHorizontal_bias="1.0">
-
-        </FrameLayout>
-
         <TextView
             android:id="@+id/textView2"
             android:layout_width="155dp"
@@ -351,14 +338,12 @@
             android:id="@+id/nextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Next"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -403,6 +388,21 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="83dp"
+            android:layout_height="72dp"
+            app:srcCompat="@drawable/rsz_alert"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:elevation="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/nextButton"
+            app:layout_constraintVertical_bias="0.042"
+            android:layout_marginLeft="8dp"
+            android:background="@null"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
