Added raise incident forms and information button over map

--- a/demo/res/layout/activity_pit_survey.xml
+++ b/demo/res/layout/activity_pit_survey.xml
@@ -270,5 +270,19 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/remarks_text" />
+
+        <ImageButton
+            android:id="@+id/incidentButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@null"
+            android:elevation="20dp"
+            android:src="@drawable/rsz_alert"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pit_next_button" />
     </android.support.constraint.ConstraintLayout>
 </HorizontalScrollView>
