--- a/demo/res/layout/fragment_construction.xml
+++ b/demo/res/layout/fragment_construction.xml
@@ -20,15 +20,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="136dp"
             android:fontFamily="serif-monospace"
-            android:text="SAM Code"
+            android:text="Area Code"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:typeface="serif"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/survey_samcodetext"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="136dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/construction_samcodetext"
