--- a/demo/res/layout/fragment_duct_details.xml
+++ b/demo/res/layout/fragment_duct_details.xml
@@ -390,19 +390,22 @@
             android:layout_marginEnd="8dp" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/incidentButton"
             android:layout_width="83dp"
             android:layout_height="72dp"
-            app:srcCompat="@drawable/rsz_alert"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:elevation="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/nextButton"
-            app:layout_constraintVertical_bias="0.042"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
             android:background="@null"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            android:elevation="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nextButton"
+            app:layout_constraintVertical_bias="0.25"
+            android:src="@drawable/rsz_alert"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.105" />
 
 
     </android.support.constraint.ConstraintLayout>
