--- a/demo/res/layout/fragment_navigation_drawer.xml
+++ b/demo/res/layout/fragment_navigation_drawer.xml
@@ -26,12 +26,12 @@
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:text="SANGEETHA"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="18sp"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/imageView4" />
+            android:layout_marginStart="22dp"
+            android:layout_toEndOf="@+id/imageView4"
+            android:text="SAMEER"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
