--- a/demo/res/layout/map.xml
+++ b/demo/res/layout/map.xml
@@ -16,5 +16,16 @@
         android:src="@drawable/layers_icon"
         />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|bottom"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/rsz_information_icon"
+        />
+
+
     </fragment>
 
