--- a/demo/res/layout/activity_survey.xml
+++ b/demo/res/layout/activity_survey.xml
@@ -12,7 +12,20 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:layout="@layout/activity_survey"/>
+        tools:layout="@layout/activity_survey">
+
+        <ImageButton
+            android:id="@+id/information_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:padding="5dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/rsz_information_icon"
+            />
+
+        </fragment>
 
 
 </LinearLayout>
