--- a/demo/res/layout/activity_book_assets.xml
+++ b/demo/res/layout/activity_book_assets.xml
@@ -34,19 +34,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <Spinner
-                        android:id="@+id/stageSpinner"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="13dp"
-                        android:layout_marginStart="13dp"
-                        android:layout_marginTop="16dp"
-                        app:layout_constraintLeft_toRightOf="@+id/textView32"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginRight="8dp"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:layout_marginEnd="8dp" />
-
                     <ListView
 
                         android:id="@+id/listView1"
@@ -56,11 +43,11 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="25dp"
+                        android:layout_marginTop="8dp"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <Button
                         android:id="@+id/button3"
@@ -76,14 +63,6 @@
                         app:layout_constraintTop_toBottomOf="@+id/listView1"
                         app:layout_constraintVertical_bias="0.371" />
 
-                    <TextView
-                        android:id="@+id/textView32"
-                        android:layout_width="135dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="Stage"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:layout_editor_absoluteX="14dp" />
                 </android.support.constraint.ConstraintLayout>
 
             </FrameLayout>
@@ -98,6 +77,29 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="6dp" />
+
+            <TextView
+                android:id="@+id/textView32"
+                android:layout_width="135dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Stage"
+                tools:layout_editor_absoluteX="6dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView30" />
+
+            <Spinner
+                android:id="@+id/stageSpinner"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="13dp"
+                app:layout_constraintLeft_toRightOf="@+id/textView32"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText2"
+                app:layout_constraintHorizontal_bias="0.0" />
 
             <EditText
                 android:id="@+id/editText2"
@@ -118,9 +120,9 @@
                 android:id="@+id/selectButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="24dp"
                 android:text="Select"
-                app:layout_constraintTop_toBottomOf="@+id/editText2"
+                app:layout_constraintTop_toBottomOf="@+id/stageSpinner"
                 android:layout_marginLeft="137dp"
                 app:layout_constraintLeft_toLeftOf="parent" />
 
