--- a/demo/res/layout/activity_construction.xml
+++ b/demo/res/layout/activity_construction.xml
@@ -30,10 +30,10 @@
             android:id="@+id/information_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start|bottom"
+            android:layout_gravity="end|bottom"
             android:padding="10dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:src="@drawable/rsz_information_icon"
             />
 
