--- a/demo/res/layout/map.xml
+++ b/demo/res/layout/map.xml
@@ -6,23 +6,15 @@
           android:layout_height="match_parent"
           android:name="com.google.android.gms.maps.SupportMapFragment">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start|top"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/layers_icon"
-        />
 
     <ImageButton
+        android:id="@+id/information_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|bottom"
+        android:layout_gravity="end|bottom"
         android:padding="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10dp"
         android:src="@drawable/rsz_information_icon"
         />
 
