--- a/demo/res/layout/activity_capture_image_pit.xml
+++ b/demo/res/layout/activity_capture_image_pit.xml
@@ -6,7 +6,8 @@
     android:layout_height="fill_parent"
     android:weightSum="1"
     android:baselineAligned="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/background_2">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
