--- a/demo/res/layout/activity_construction.xml
+++ b/demo/res/layout/activity_construction.xml
@@ -13,7 +13,16 @@
         android:layout_weight="1"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         tools:layout="@layout/activity_construction">
-
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|bottom"
+            android:padding="50dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/home"
+            />
 
         <ImageButton
             android:id="@+id/layer_button"
