--- a/demo/res/layout/activity_survey.xml
+++ b/demo/res/layout/activity_survey.xml
@@ -13,6 +13,16 @@
         android:layout_weight="1"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         tools:layout="@layout/activity_survey">
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|bottom"
+            android:padding="50dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/home"
+            />
 
         <ImageButton
             android:id="@+id/information_button"
@@ -24,6 +34,7 @@
             android:layout_marginRight="10dp"
             android:src="@drawable/rsz_information_icon"
             />
+
 
         </fragment>
 
