--- a/demo/res/layout/map.xml
+++ b/demo/res/layout/map.xml
@@ -5,8 +5,16 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:name="com.google.android.gms.maps.SupportMapFragment">
-
-
+    <ImageButton
+        android:id="@+id/home_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center|bottom"
+        android:padding="50dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/home"
+        />
     <ImageButton
         android:id="@+id/information_button"
         android:layout_width="wrap_content"
