--- a/demo/res/layout/activity_capture_image.xml
+++ b/demo/res/layout/activity_capture_image.xml
@@ -42,6 +42,19 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+        <ImageButton
+            android:id="@+id/btnSpeak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/ic_mic"
+            android:layout_marginLeft="28dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="51dp"
+            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton"
+            app:layout_constraintRight_toLeftOf="@+id/imageView"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.121" />
 
         <ImageView
             android:id="@+id/imageView"
