--- a/demo/res/layout/activity_capture_image_pit.xml
+++ b/demo/res/layout/activity_capture_image_pit.xml
@@ -8,23 +8,26 @@
     android:baselineAligned="false"
     android:orientation="vertical"
     android:background="@drawable/background_2">
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="124dp"
             android:layout_height="136dp"
             android:layout_marginBottom="139dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="0.22"
             android:gravity="center_horizontal"
             android:src="@drawable/takepic"
             app:layout_constraintBottom_toTopOf="@+id/fibereqpbutton"
-            android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
             app:layout_constraintVertical_bias="1.0" />
+
         <Button
             android:id="@+id/fibereqpbutton"
             android:layout_width="0dp"
@@ -39,19 +42,21 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
         <ImageButton
             android:id="@+id/btnSpeak"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:src="@drawable/ic_mic"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginLeft="28dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="51dp"
-            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton"
-            app:layout_constraintRight_toLeftOf="@+id/imageView"
             android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.121" />
+            android:layout_marginTop="37dp"
+            android:background="@null"
+            android:src="@drawable/brain"
+            app:layout_constraintHorizontal_bias="0.093"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/fibereqpbutton" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="127dp"
