--- a/demo/res/layout/map.xml
+++ b/demo/res/layout/map.xml
@@ -7,19 +7,19 @@
           android:name="com.google.android.gms.maps.SupportMapFragment">
     <ImageButton
         android:id="@+id/home_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center|bottom"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:layout_gravity="left|top"
         android:padding="50dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="50dp"
         android:src="@drawable/home"
         />
     <ImageButton
         android:id="@+id/information_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_gravity="top|left"
         android:padding="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="10dp"
