--- a/demo/res/layout/fragment_survey.xml
+++ b/demo/res/layout/fragment_survey.xml
@@ -9,6 +9,23 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageButton
+            android:id="@+id/nlpButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/brain"
+            android:layout_marginStart="8dp"
+            android:elevation="12dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@null"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintVertical_bias="0.348" />
+
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
@@ -20,7 +37,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.369" />
+            app:layout_constraintVertical_bias="0.184" />
         <HorizontalScrollView
             android:layout_width="0dp"
             android:layout_height="354dp"
