--- a/demo/res/layout/map.xml
+++ b/demo/res/layout/map.xml
@@ -17,13 +17,25 @@
         />
     <ImageButton
         android:id="@+id/information_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
         android:layout_gravity="top|left"
         android:padding="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/rsz_information_icon"
+        />
+    <ImageButton
+        android:id="@+id/nlpButton"
+        android:layout_gravity="left|top"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="110dp"
+        android:background="@null"
+        android:src="@drawable/brain"
         />
 
 
